# tabmoe

./: .gitignore  pyproject.toml
tabmoe/data/: dataset.py  embeddings.py  preprocessing.py
tabmoe/enums/: data_processing.py  model.py  moe.py  utils.py
tabmoe/modeling/: embeddings.py  model.py  optimization.py  trainer.py
tabmoe/modeling/backbones/: __init__.py  base.py  mlp.py  moe.py  utils.py
tabmoe/models/: base.py  model.py  moe.py
tabmoe/preprocessing/: binary_encoder.py  dataset.py
tabmoe/utils/: device.py  hyperparam_logger.py  metrics.py  model.py
