[tool.poetry]
name = "tabmoe"
version = "0.1.0"
description = ""
authors = ["Andrei Chernov <andrei.chernov@flix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.6.0"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
rtdl-num-embeddings = "^0.0.11"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
